Overflow issue

--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -193,6 +193,7 @@ a:hover,
 	z-index: 1;
 	height: 100%;
 	width: 100%;
+	overflow-x: hidden;
 	background-color: rgba(0,0,0,.4);
 }
 
